more clinical service configs
